--- a/.github/workflows/test-bb.yml
+++ b/.github/workflows/test-bb.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: ${{ matrix.java }}
+          java-version: 21
       - name: Clojure CLI
         uses: DeLaGuardo/setup-clojure@master
         with:
